--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "dependencies": {
+    "knex": "^3.1.0",
     "koa": "^2.15.3",
     "koa-bodyparser": "^4.4.1",
-    "koa-router": "^12.0.1"
+    "koa-router": "^12.0.1",
+    "sqlite3": "^5.1.7"
   },
   "scripts": {
-  "start": "node src/app.js"
-}
-
+    "start": "node index.js",
+    "test": "mocha"
+  },
+  "devDependencies": {
+    "mocha": "^10.4.0",
+    "chai": "^4.3.4"
+  }
 }
